use slim minified jquery

--- a/_layouts/default-md.html
+++ b/_layouts/default-md.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   {% include layout-components/head.html %}
-  <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <body>
     {% include layout-components/sidenav.html %}
     {% include layout-components/topnav.html %}
