add COVID-19 alert and set titlebar color to yellow

--- a/_includes/layout-components/topnav.html
+++ b/_includes/layout-components/topnav.html
@@ -24,3 +24,25 @@
     </div>
   </div>
 </div>
+<style media="screen">
+  #topnav {
+    background-color: #ffcc00 !important;
+    box-shadow: none !important;
+  }
+  #topnav-title, .menu-icon>i, .topnav #main-nav>li>a, #storeTabBar .mdc-tab .mdc-tab__text-label {
+    color: black !important;
+  }
+  #storeTabBar .mdc-tab .mdc-tab-indicator__content--underline {
+    border-color: black !important;
+  }
+  #storeTabBar {
+    top:98px;
+    background-color: #ffcc00 !important;
+  }
+</style>
+<div class="content-strip content-strip--center content-strip--min-padding" style="background-color:yellow;position:sticky;top:56px;z-index:8;box-shadow: 0 2px 4px -1px rgba(0,0,0,0.1), 0 4px 5px 0 rgba(0,0,0,0.07), 0 1px 10px 0 rgba(0,0,0,0.06);">
+  <div class="flex-item">
+    <p style="display:inline-block;color:black;margin:0;font-family:'IBM Plex Sans',Roboto,sans-serif;font-weight:600;">Coronavirus (COVID-19) Updates</p>
+    <a href="/information/covid-19.html" class="mdc-button mdc-button--dense" style="margin:0 10px;padding:0 10px;color:#000000;background-color:#ffcc00;">Read the Updates</a>
+  </div>
+</div>
