fix: always apply mdc-button-outlined--on-primary styles

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -17,9 +17,29 @@
   $large-component-radius: 0px
 );
 
+@use '@material/button/index' as mdc-button;
+@use '@material/ripple/index' as mdc-ripple;
+
 html,
 body {
   background-color: theme.$surface;
   color: theme.$on-surface;
   margin: 0;
+}
+
+html .mdc-button-outlined--on-primary {
+  @include mdc-button.ink-color(#e0e0e0);
+  @include mdc-button.outline-color(#e0e0e0);
+}
+
+html .mdc-button-outlined--on-primary .mdc-button__ripple {
+  @include mdc-ripple.states-base-color('on-primary');
+}
+
+/* use correct font for button labels */
+html .mdc-button .mdc-button__label,
+html .mdc-tab .mdc-tab__text-label {
+  text-transform: uppercase;
+  font-family: var(--font-headline);
+  font-weight: 700;
 }
